added default input support

--- a/index.html
+++ b/index.html
@@ -27,12 +27,20 @@
     <main class="zuik zuik__main">
         <section class="zuik-row">
             <div class="zuik-col">
-                <h2>Znyatok UI Kit v0.1</h2>
+                <h2>Znyatok UI Kit v0.1.1</h2>
                 <h3>Lorem ipsum dolor, sit amet</h3>
                 <p>consectetur <mark>adipisicing</mark> elit. Quisquam qui sed dicta reiciendis veniam officia
                     laudantium perspiciatis mollitia, <small> ipsa voluptatum exercitationem placeat debitis fuga
                         nostrum illo,
                         officiis iste consequuntur nemo!</small></p>
+            </div>
+        </section>
+        <section class="zuik-row">
+            <div class="zuik-col">
+                <p>Simple input</p>
+            </div>
+            <div class="zuik-col">
+                <input type="text" class="zuik-input">
             </div>
         </section>
         <section class="zuik-row">
