--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         body {
             margin: 0;
         }
-
     </style>
 </head>
 
@@ -41,6 +40,23 @@
             </div>
             <div class="zuik-col">
                 <input type="text" class="zuik-input">
+            </div>
+        </section>
+        <section class="zuik-row">
+            <div class="zuik-col">
+                <p>Readonly input</p>
+            </div>
+            <div class="zuik-col">
+                <input type="text" class="zuik-input" value="Readonly information" readonly>
+            </div>
+        </section>
+        <section class="zuik-row">
+            <div class="zuik-col">
+                <p>Readonly input with extra text</p>
+            </div>
+            <div class="zuik-col">
+                <input type="text" class="zuik-input"
+                    value="Readonly information with extra text that is to long to view" readonly>
             </div>
         </section>
         <section class="zuik-row">
