--- a/index.html
+++ b/index.html
@@ -24,212 +24,220 @@
         </div>
     </header>
     <main class="zuik zuik__main">
-        <section class="zuik-row">
+        <section class="zuik-group">
             <div class="zuik-col-12">
-                <h2>Znyatok UI Kit v0.2.0</h2>
+                <h2>Znyatok UI Kit v0.2.1</h2>
                 <h3>Lorem ipsum dolor, sit amet</h3>
                 <p>consectetur <mark>adipisicing</mark> elit. Quisquam qui sed dicta reiciendis veniam officia
                     laudantium perspiciatis mollitia, <small> ipsa voluptatum exercitationem placeat debitis fuga
                         nostrum illo,
                         officiis iste consequuntur nemo!</small></p>
-                <hr>
             </div>
+        </section>
 
-            <div class="zuik-col">
-                <button class="zuik-button js-switch-color-scheme">Switch color scheme</button>
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col">
-                <p>Simple input</p>
-            </div>
-            <div class="zuik-col">
-                <input type="text" class="zuik-input">
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col">
-                <p>Readonly input</p>
-            </div>
-            <div class="zuik-col">
-                <input type="text" class="zuik-input" value="Readonly information" readonly>
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col">
-                <p>Readonly input with extra text</p>
-            </div>
-            <div class="zuik-col">
-                <input type="text" class="zuik-input"
-                    value="Readonly information with extra text that is to long to view" readonly>
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col">
-                <p class="zuik-p">consectetur <del>adipisicing</del> <u>elit</u>. Quisquam qui sed dicta reiciendis
-                    veniam officia
-                    laudantium perspiciatis mollitia</p>
-            </div>
-            <div class="zuik-col-2 text-right">
-                <input type="checkbox" class="zuik-switch">
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col">
-                <p class="zuik-p">checkbox 2</p>
-            </div>
-            <div class="zuik-col-2 text-right">
-                <input type="checkbox" class="zuik-switch">
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col">
-                <p class="zuik-p">Select</p>
-            </div>
-            <div class="zuik-col">
-                <select class="zuik-select">
-                    <option>Это родной элемент выбора</option>
-                    <option>Яблоки</option>
-                    <option>Бананы</option>
-                    <option>Grapes</option>
-                    <option>Oranges</option>
-                </select>
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col">
-                <p class="zuik-p">consectetur adipisicing elit. Quisquam qui sed dicta reiciendis veniam officia
-                    laudantium perspiciatis mollitia</p>
-            </div>
-            <div class="zuik-col">
-                <select class="zuik-select">
-                    <option>Это родной элемент выбора</option>
-                    <option>Яблоки</option>
-                    <option>Бананы</option>
-                    <option>Grapes</option>
-                    <option>Oranges</option>
-                </select>
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col">
-                <table class="zuik-table">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
-                        </tr>
-                    </thead>
-                    <tfoot>
-                        <tr>
-                            <th scope="col" colspan="4">Footer</th>
-                        </tr>
-                    </tfoot>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td colspan="2">Larry the Bird</td>
-                            <td>@twitter</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col">
-                <p class="zuik-p">Range consectetur adipisicing elit. Quisquam qui sed dicta reiciendis veniam officia
-                    laudantium perspiciatis mollitia</p>
-            </div>
-            <div class="zuik-col">
-                <input type="range" class="zuik-range" min="20" max="90" value="50" step="5" data-mark="%">
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col">
-                <p class="zuik-p">Range</p>
-            </div>
-            <div class="zuik-col">
-                <input type="range" class="zuik-range" min="20" max="90" value="50" step="5" data-mark="%">
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col">
-                <p class="zuik-p">Color</p>
-            </div>
-            <div class="zuik-col zuik-col-1 text-right">
-                <input type="color" class="zuik-color">
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col">
-                <p class="zuik-p">Colors Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius hic nobis
-                    reprehenderit molestiae, velit labore, exercitationem magnam aperiam, expedita assumenda maxime
-                    voluptatibus? Alias aliquam possimus, architecto maiores molestias culpa quas.</p>
-            </div>
-            <div class="zuik-col zuik-row bgc-transparent">
-                <div class="zuik-col-12 flex-space-between pl-0">
-                    <input type="color" class="zuik-color" value="#00bcd4">
-                    <input type="color" class="zuik-color" value="#009688">
-                    <input type="color" class="zuik-color" value="#4caf50">
-                    <input type="color" class="zuik-color" value="#8bc34a">
-                    <input type="color" class="zuik-color" value="#ffeb3b">
-                    <input type="color" class="zuik-color" value="#ffc107">
+        <section class="zuik-group">
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <button class="zuik-button js-switch-color-scheme">Switch color scheme</button>
                 </div>
-                <div class="zuik-col-12 flex-space-between pl-0">
-                    <input type="color" class="zuik-color" value="#f44336">
-                    <input type="color" class="zuik-color" value="#e91e63">
-                    <input type="color" class="zuik-color" value="#673ab7">
-                    <input type="color" class="zuik-color" value="#3f51b5">
-                    <input type="color" class="zuik-color" value="#2196f3">
-                    <input type="color" class="zuik-color" value="#03a9f4">
+            </section>
+        </section>
+
+        <section class="zuik-group">
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <p>Simple input</p>
                 </div>
-            </div>
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col-6">
-                <p class="zuik-p">Select + Color</p>
-            </div>
-            <div class="zuik-col">
-                <select class="zuik-select">
-                    <option>Это родной элемент выбора</option>
-                    <option>Яблоки</option>
-                    <option>Бананы</option>
-                    <option>Grapes</option>
-                    <option>Oranges</option>
-                </select>
+                <div class="zuik-col">
+                    <input type="text" class="zuik-input">
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <p>Readonly input</p>
+                </div>
+                <div class="zuik-col">
+                    <input type="text" class="zuik-input" value="Readonly information" readonly>
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <p>Readonly input with extra text</p>
+                </div>
+                <div class="zuik-col">
+                    <input type="text" class="zuik-input"
+                        value="Readonly information with extra text that is to long to view" readonly>
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <p class="zuik-p">consectetur <del>adipisicing</del> <u>elit</u>. Quisquam qui sed dicta reiciendis
+                        veniam officia
+                        laudantium perspiciatis mollitia</p>
+                </div>
+                <div class="zuik-col-2 text-right">
+                    <input type="checkbox" class="zuik-switch">
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <p class="zuik-p">checkbox 2</p>
+                </div>
+                <div class="zuik-col-2 text-right">
+                    <input type="checkbox" class="zuik-switch">
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <p class="zuik-p">Select</p>
+                </div>
+                <div class="zuik-col">
+                    <select class="zuik-select">
+                        <option>Это родной элемент выбора</option>
+                        <option>Яблоки</option>
+                        <option>Бананы</option>
+                        <option>Grapes</option>
+                        <option>Oranges</option>
+                    </select>
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <p class="zuik-p">consectetur adipisicing elit. Quisquam qui sed dicta reiciendis veniam officia
+                        laudantium perspiciatis mollitia</p>
+                </div>
+                <div class="zuik-col">
+                    <select class="zuik-select">
+                        <option>Это родной элемент выбора</option>
+                        <option>Яблоки</option>
+                        <option>Бананы</option>
+                        <option>Grapes</option>
+                        <option>Oranges</option>
+                    </select>
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <table class="zuik-table">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">First</th>
+                                <th scope="col">Last</th>
+                                <th scope="col">Handle</th>
+                            </tr>
+                        </thead>
+                        <tfoot>
+                            <tr>
+                                <th scope="col" colspan="4">Footer</th>
+                            </tr>
+                        </tfoot>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td colspan="2">Larry the Bird</td>
+                                <td>@twitter</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <p class="zuik-p">Range consectetur adipisicing elit. Quisquam qui sed dicta reiciendis veniam
+                        officia
+                        laudantium perspiciatis mollitia</p>
+                </div>
+                <div class="zuik-col">
+                    <input type="range" class="zuik-range" min="20" max="90" value="50" step="5" data-mark="%">
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <p class="zuik-p">Range</p>
+                </div>
+                <div class="zuik-col">
+                    <input type="range" class="zuik-range" min="20" max="90" value="50" step="5" data-mark="%">
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <p class="zuik-p">Color</p>
+                </div>
+                <div class="zuik-col zuik-col-1 text-right">
+                    <input type="color" class="zuik-color">
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col">
+                    <p class="zuik-p">Colors Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius hic nobis
+                        reprehenderit molestiae, velit labore, exercitationem magnam aperiam, expedita assumenda maxime
+                        voluptatibus? Alias aliquam possimus, architecto maiores molestias culpa quas.</p>
+                </div>
+                <div class="zuik-col zuik-row bgc-transparent">
+                    <div class="zuik-col-12 flex-space-between pl-0">
+                        <input type="color" class="zuik-color" value="#00bcd4">
+                        <input type="color" class="zuik-color" value="#009688">
+                        <input type="color" class="zuik-color" value="#4caf50">
+                        <input type="color" class="zuik-color" value="#8bc34a">
+                        <input type="color" class="zuik-color" value="#ffeb3b">
+                        <input type="color" class="zuik-color" value="#ffc107">
+                    </div>
+                    <div class="zuik-col-12 flex-space-between pl-0">
+                        <input type="color" class="zuik-color" value="#f44336">
+                        <input type="color" class="zuik-color" value="#e91e63">
+                        <input type="color" class="zuik-color" value="#673ab7">
+                        <input type="color" class="zuik-color" value="#3f51b5">
+                        <input type="color" class="zuik-color" value="#2196f3">
+                        <input type="color" class="zuik-color" value="#03a9f4">
+                    </div>
+                </div>
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col-6">
+                    <p class="zuik-p">Select + Color</p>
+                </div>
+                <div class="zuik-col">
+                    <select class="zuik-select">
+                        <option>Это родной элемент выбора</option>
+                        <option>Яблоки</option>
+                        <option>Бананы</option>
+                        <option>Grapes</option>
+                        <option>Oranges</option>
+                    </select>
 
-            </div>
-            <div class="zuik-col-1 text-right">
-                <input type="color" class="zuik-color" value="">
-            </div>
-        </section>
-        <section class="zuik-row">
-            <div class="zuik-col-6">
-                <p class="zuik-p">Buttons</p>
-            </div>
-            <div class="zuik-col flex-space-between">
-                <button class="zuik-button zuik-button__link">Link</button>
+                </div>
+                <div class="zuik-col-1 text-right">
+                    <input type="color" class="zuik-color" value="">
+                </div>
+            </section>
+            <section class="zuik-row">
+                <div class="zuik-col-6">
+                    <p class="zuik-p">Buttons</p>
+                </div>
+                <div class="zuik-col flex-space-between">
+                    <button class="zuik-button zuik-button__link">Link</button>
 
-                <button class="zuik-button zuik-button__second">Second</button>
+                    <button class="zuik-button zuik-button__second">Second</button>
 
-                <button class="zuik-button">Main</button>
-            </div>
+                    <button class="zuik-button">Main</button>
+                </div>
+            </section>
         </section>
+
     </main>
     <footer class="zuik zuik__footer">
         <div class="zuik-row">
@@ -242,14 +250,14 @@
     </footer>
     <script>
         (() => {
-            const classNameDark = 'zuik__dark'; 
+            const classNameDark = 'zuik__dark';
             const classNameLight = 'zuik__light'
             const mainContainer = document.body;
             const btnColorShemaSwitch = document.querySelector('.js-switch-color-scheme');
-            
+
             btnColorShemaSwitch.addEventListener('click', _ => {
                 const isDarkByDefault = window.matchMedia("(prefers-color-scheme: dark)").matches;
-            
+
                 if (isDarkByDefault) {
                     mainContainer.classList.toggle(classNameLight);
                 } else {
